# Agent-Manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.openclaw  commands.md  docker-compose.yml  docker-setup.sh  entrypoint.sh  install_garage_skills.sh  main.py  openapi.json  openclaw.json  pyproject.toml  requirements.txt  sync_cron_manager.sh  test.json  test_bg_sync.py  test_bg_sync_stream.py  test_cron_templates.py  test_gmail_router.py  test_ijson.py  test_proxy.py  test_sync.py  verify_integration.py
.github/: copilot-instructions.md
agent_manager/: agent_service.py  celery_app.py  chat_helpers.py  chat_service.py  config.py  database.py  dependencies.py  garage_tool.py  openclaw.py  router.py  schemas.py  security.py  session_service.py  ws_manager.py
agent_manager/clients/: cli_gateway_client.py  gateway_client.py  plugin_notifier.py  wallet_client.py  ws_gateway_client.py
agent_manager/integrations/: __init__.py  base.py  linkedin.py  notion.py  sdk_logger.py  twitter.py
agent_manager/middleware/: service_auth.py
agent_manager/models/: __init__.py  agent_activity.py  agent_registry.py  agent_subscription.py  agent_task.py  chat_usage.py  context.py  conversation_message.py  cron.py  cron_template.py  failed_ingestion.py  gmail.py  integration.py  third_party_context.py  voice_call.py  wallet_transaction.py
agent_manager/repositories/: agent_activity_repository.py  agent_registry_repository.py  context_repository.py  conversation_repository.py  cron_ownership_repository.py  cron_pipeline_repository.py  cron_template_repository.py  failed_ingestion_repository.py  filesystem_storage.py  gmail_sync_repository.py  integration_repository.py  (+6 more)
dashboard/: cron.html
docs/: cron-templates-and-integrations.md
gmail_service/: __init__.py  auth_service.py  calendar_service.py  models.py  router.py  service.py
migrations/: env.py
scripts/: diff_synth_paths.py  smoke_test_gateway.py  smoke_tts_quality.py
task-dashboard-test/: index.html
(+479 files in other folders)
