[project]
name = "openclawapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "httpx>=0.28.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.41.0",
    "cryptography>=43.0.0",
    "google-api-python-client>=2.155.0",
    "google-auth>=2.37.0",
    "google-auth-oauthlib>=1.2.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pytest>=9.0.2",
    "psutil>=7.2.2",
    "google-api-python-client-stubs>=1.33.0",
    "boto3>=1.42.64",
    "boto3-stubs>=1.42.64",
    "celery>=5.6.2",
    "redis>=7.3.0",
    "qdrant-client>=1.17.0",
    "openai>=2.26.0",
    "google-genai>=1.66.0",
    "requests-oauthlib>=2.0.0",
    "ijson>=3.4.0",
    "ruff>=0.15.5",
    "celery-types>=0.26.0",
    "cron-validator>=1.0.8",
]
